--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
 		"connect-flash": "^0.1.1",
 		"connect-mongo": "^3.2.0",
 		"cookie-parser": "^1.4.5",
+		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"ejs": "^3.1.3",
 		"express": "^4.17.1",
 		"express-ejs-layouts": "^2.5.0",
 		"express-session": "^1.17.1",
+		"jsonwebtoken": "^8.5.1",
 		"moment": "^2.24.0",
 		"mongoose": "^5.9.23",
 		"passport": "^0.4.1",
@@ -28,10 +30,6 @@
 	"devDependencies": {
 		"chai": "^4.2.0",
 		"chai-http": "^4.3.0",
-		"coveralls": "^3.1.0",
-		"cross-env": "^7.0.2",
-		"jest": "^26.1.0",
-		"mocha": "^8.0.1",
-		"supertest": "^4.0.2"
+		"mocha": "^8.0.1"
 	}
 }
