--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
 		"moment": "^2.24.0",
 		"mongoose": "^5.9.23",
 		"passport": "^0.4.1",
-		"passport-local": "^1.0.0"
+		"passport-local": "^1.0.0",
+		"stripe": "^8.91.0"
 	},
 	"devDependencies": {
 		"chai": "^4.2.0",
